--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -36,8 +36,10 @@
     }
 
     @media screen and (max-width: 768px) {
-      display: block;
+      display: flex;
       width: 100%;
+      flex-flow: column;
+      align-items: center;
     }
   }
 
@@ -48,7 +50,8 @@
 
     @media screen and (max-width: 768px) {
       &:first-child {
-        margin: 5% 0 11%;
+        // margin: 5% 0 10%;
+        margin: 10px 0 40px;
       }
     }
 
@@ -86,7 +89,7 @@
     @include futura-font(1rem, inherit, none);
 
     @media screen and (max-width: 768px) {
-      margin: 3% 0 9%;
+      margin: 9% 0 3%;
     }
 
     .form__checkbox-label {
@@ -96,7 +99,7 @@
       align-items: center;
 
       @media screen and (max-width: 768px) {
-        justify-content: flex-start;
+        justify-content: center;
       }
     }
 
