--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -27,6 +27,14 @@
   color: $white_color;
   background-color: $back-dark;
 
+  .form__display {
+    @media screen and (max-width: 768px) {
+      display: flex;
+      flex-flow: column;
+      align-items: center;
+    }
+  }
+
   .form__main-group:first-child {
     margin-right: 5%;
   }
@@ -54,12 +62,12 @@
   }
 
   .form__block {
-    margin-bottom: 7%;
+    margin-bottom: 45px;
     justify-content: space-between;
   }
 
   .form__checkbox {
-    margin-top: 6%;
+    margin-top: 9%;
   }
 
   .vertical-form-btn-wrap {
@@ -122,7 +130,7 @@
     transition: transform 1s ease-out;
 
     &:hover {
-      transform: rotate(360deg) scale(1.5);
+      transform: rotate(360deg) scale(1.25);
     }
 
     @media screen and (max-width: 650px) {
